--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,24 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  <div class="row">
+    <aside class="col-sm-4">
+      <%= form_with(model: @task, local: true) do |f| %>
+        <div class="form-group">
+          <%= f.text_area :content, class: 'form-control', rows: 2 %>
+          <br>
+          <%= f.text_area :status, class: 'form-control', rows: 2 %>
+        </div>
+        <%= f.submit '新規作成', class: 'btn btn-primary btn-block' %>
+      <% end %>
+    </aside>
+    <div class="col-sm-8">
+      <%= render 'tasks/tasks', tasks: @tasks %>
+    </div>
+  </div>
 <% else %>
-<h1>Tasklist サイト</h1>
-<%= link_to 'sign up', signup_path %>
-<%= link_to 'Login', login_path %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the tasks</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
 <% end %>
