--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h1>新規登録</h1>
+  <h1>Sign up</h1>
 </div>
 
 <div class="row">
@@ -28,7 +28,7 @@
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
-      <%= f.submit 'sign up', class: 'btn btn-primary btn-block' %>
+      <%= f.submit 'Sign up', class: 'btn btn-primary btn-block' %>
     <% end %>
   </div>
 </div>
