--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
         <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 80 }) %>" alt="">
       </div>
     </div>
+    <%= link_to '自分の投稿ページへ', root_path, class: 'btn btn-light' %>
   </aside>
   <div class="col-sm-8">
     <ul class="nav nav-tabs nav-justified mb-3">
