--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -7,12 +7,16 @@
           <%= link_to task.user.name, user_path(task.user) %> <span class="text-muted">posted at <%= task.created_at %></span>
         </div>
         <div>
+          タスク
           <p><%= task.content %></p>
+          ステータス
           <p><%= task.status %></p>
         </div>
         <div>
           <% if current_user == task.user %>
-            <%= link_to "Delete", task, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+           <%= link_to 'タスクを削除', task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger btn-sm' %>
+           <%= link_to 'このタスクを編集する', edit_task_path(task), class: 'btn btn-light' %>
+           <%= link_to 'タスク詳細ページ', task, class: 'btn btn-light' %>
           <% end %>
         </div>
       </div>
