--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @task.id %> のタスク編集ページ</h1>
+<h1>ID<%= @task.id %>のタスク編集ページ</h1>
 
 <%= render 'form', task: @task %>
 
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', tasks_path, class: 'btn btn-light' %>
