--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,10 @@
 <h1>タスク一覧</h1>
+
 <ul>
     <% @tasks.each do |task| %>
-     <li<%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+     <li></li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
     <% end %>
 </ul>
 
-<%= link_to '新規タスクの投稿', new_task_path %>
+
+<%= link_to '新規タスクの投稿', new_task_path, class: 'btn btn-light' %>
