--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @task.id %>のタスク詳細ページ</h1>
+<h1>ID<%= @task.id %>のタスク詳細ページ</h1>
 
 <p>ステータス: <%= @task.status %></p>
 <p>タスク: <%= @task.content %></p>
 
-<%= link_to '一覧に戻る', tasks_path %>
-<%= link_to 'このタスクを編集する', edit_task_path(@task) %>
-<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to '一覧に戻る', tasks_path, class: 'btn btn-light' %>
+<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-light' %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger btn-sm' %>
