--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -3,8 +3,10 @@
     <aside class="col-sm-4">
       <%= form_with(model: @task, local: true) do |f| %>
         <div class="form-group">
+          タスク
           <%= f.text_area :content, class: 'form-control', rows: 2 %>
           <br>
+          ステータス
           <%= f.text_area :status, class: 'form-control', rows: 2 %>
         </div>
         <%= f.submit '新規作成', class: 'btn btn-primary btn-block' %>
