--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -2,6 +2,15 @@
   <div class="row">
     <aside class="col-sm-4">
       <%= form_with(model: @task, local: true) do |f| %>
+<% if @task.errors.any? %>
+  <div id="error_explanation" class="alert alert-warning">
+    <ul class="mb-0">
+      <% @task.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
         <div class="form-group">
           タスク
           <%= f.text_area :content, class: 'form-control', rows: 2 %>
