--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -2,13 +2,10 @@
   <ul class="list-unstyled">
     <% users.each do |user| %>
       <li class="media">
-        <img class="mr-2 rounded" src="<%= gravatar_url(user, { size: 50 }) %>" alt="">
+        <p><img class="mr-2 rounded" src="<%= gravatar_url(user, { size: 50 }) %>" alt=""></p>
         <div class="media-body">
           <div>
             <%= user.name %>
-          </div>
-          <div>
-            <p><%= link_to 'My Tasks', user_path(user) %></p>
           </div>
         </div>
       </li>
