--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,4 +7,4 @@
 </ul>
 
 
-<%= link_to '新規タスクの投稿', new_task_path, class: 'btn btn-light' %>
+<%= link_to '新規タスクの投稿', root_path, class: 'btn btn-light' %>
