--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
     <% @tasks.each do |task| %>
-     <li></li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+     <li></li><%= task.status %> &gt; <%= task.content %></li>
     <% end %>
 </ul>
 
